# bizkit

./: .gitignore  .gitmodules  CHANGELOG  Cargo.toml  README  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
blog/: blog.css  build.sh
client/js/: category.js  product.js
core/: Cargo.toml
core/src/: inventory.rs  lib.rs  product.rs
core/src/databases/: inventory.rs  mod.rs
crates/data/: Cargo.toml
crates/data/src/: categories.rs  error.rs  lib.rs  product.rs  product_categories.rs  product_images.rs  products.rs  staff.rs  staff_status.rs  versions.rs
crates/database/: Cargo.toml
crates/database/src/: categories.rs  error.rs  inventory.rs  lib.rs  product_categories.rs  product_images.rs  products.rs  staff.rs
crates/kontrollers/: Cargo.toml
crates/kontrollers/src/: lib.rs
crates/kontrollers/src/categories/: add.rs  delete.rs  get.rs  mod.rs
crates/kontrollers/src/products/: add.rs  delete.rs  get.rs  get_by_id.rs  mod.rs
doc/: README.md  style.css
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: error.dart  main.dart  util.dart
lib/screens/: create_account.dart  dashboard.dart  home.dart  login.dart
lib/sme/real_estate/: add_property.dart
lib/wid/: menu.dart  scaffold.dart
linux/: CMakeLists.txt
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
