[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Kwatafana Systems"]
description = "Operating System for SMEs"
documentation = "https://bizkit.kwatafana.org/"

[workspace.dependencies]
kong = { git = "https://gitlab.com/kwatafana/infra/kong.git"}
kong_kontrollers = { git = "https://gitlab.com/kwatafana/infra/kontrollers.git", features = ["login", "postgres"]}
kommon = { git = "https://gitlab.com/kwatafana/infra/kommon.git", features = ["serde"]}

serde = { version = "1.0.196", features = ["derive"] }
serde_json = {version = "1.0.113"}
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-serde_json-1"]}
chrono = { version = "0.4.33", features = ["serde"]}
rust_decimal = {version = "1.35.0", features = ["db-postgres"]}
base64 = "0.22.0"