[package]
name = "bizkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]} # Date and time library
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"]} #  Ergonomic wrapper for SQLite
serde = { version = "1.0.192", features = ["derive"] } # A generic serialization/deserialization framework