[package]
name = "bizkitkontrollers"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
bizkitdata = { path = "../data"}
bizkitdatabase = { path = "../database"}

kong.workspace = true
kong_kontrollers.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
serde_json.workspace = true
postgres.workspace = true